--- a/index.html
+++ b/index.html
@@ -9,10 +9,36 @@
     <link rel="icon" type="image/png" sizes="32x32" href="icon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="icon/favicon-16x16.png">
     <link rel="manifest" href="icon/site.webmanifest">
+    <script src="https://kit.fontawesome.com/2f7f173414.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
-    Hello
+    
+    <header class="header">
+        <h1 class="title">Rock Paper Scissors</h1>
+    </header>
+
+    <div class="results">
+        <div class="score">
+            <p>Score</p>
+        </div>
+
+        <div class="scores">
+            <div class="ps">
+                <p>Player: 0</p>
+            </div>
+            <div class="cs">
+                <p>Computer: 0</p>
+            </div>
+        </div>
+    </div>
+
+    <div class="game">
+        <div class="btn"><i class="fas fa-hand-rock fa-7x"></i></div>
+        <div class="btn"><i class="fas fa-hand-paper fa-7x"></i></div>
+        <div class="btn"><i class="fas fa-hand-scissors fa-7x"></i></div>
+    </div>
+
     <script src="script.js"></script>
 </body>
 
